--- a/config/manifest/eksa-components.yaml
+++ b/config/manifest/eksa-components.yaml
@@ -384,7 +384,7 @@ spec:
                       - metadata
                       - version
                       type: object
-                    bottlerocket:
+                    bottlerocketHostContainers:
                       properties:
                         admin:
                           properties:
@@ -444,13 +444,7 @@ spec:
                               description: The image repository, name, and tag
                               type: string
                           type: object
-                      required:
-                      - admin
-                      - control
-                      type: object
-                    bottlerocketBootstrap:
-                      properties:
-                        bootstrap:
+                        kubeadmBootstrap:
                           properties:
                             arch:
                               description: Architectures of the asset
@@ -480,7 +474,9 @@ spec:
                               type: string
                           type: object
                       required:
-                      - bootstrap
+                      - admin
+                      - control
+                      - kubeadmBootstrap
                       type: object
                     certManager:
                       properties:
@@ -3094,8 +3090,7 @@ spec:
                       type: object
                   required:
                   - bootstrap
-                  - bottlerocket
-                  - bottlerocketBootstrap
+                  - bottlerocketHostContainers
                   - certManager
                   - cilium
                   - clusterAPI
