--- a/pkg/providers/snow/testdata/expected_results_main_md.yaml
+++ b/pkg/providers/snow/testdata/expected_results_main_md.yaml
@@ -9,6 +9,7 @@ spec:
     spec:
       clusterConfiguration:
         apiServer: {}
+        bottlerocketAdmin: {}
         bottlerocketBootstrap: {}
         bottlerocketControl: {}
         controllerManager: {}
@@ -20,6 +21,7 @@ spec:
         registryMirror: {}
         scheduler: {}
       joinConfiguration:
+        bottlerocketAdmin: {}
         bottlerocketBootstrap: {}
         bottlerocketControl: {}
         discovery: {}
