--- a/pkg/clustermanager/testdata/eksa_components.yaml
+++ b/pkg/clustermanager/testdata/eksa_components.yaml
@@ -1,16 +1,1 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: eksa-system
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: eksa-controller-manager
-  namespace: eksa-system
-spec:
-  template:
-    spec:
-      containers:
-      - args:
-        - --leader-elect
+test data
