--- a/pkg/providers/nutanix/config/cp-template.yaml
+++ b/pkg/providers/nutanix/config/cp-template.yaml
@@ -154,6 +154,7 @@ spec:
     preKubeadmCommands:
       - echo "::1         ipv6-localhost ipv6-loopback" >/etc/hosts
       - echo "127.0.0.1   localhost" >>/etc/hosts
+      # This section should be removed once these packages are added to the image builder process
       - echo "127.0.0.1   $(hostname)" >> /etc/hosts
       - apt update
       - apt install -y nfs-common open-iscsi
