factor out registry mirror stuff to a separate package

--- a/config/crd/bases/anywhere.eks.amazonaws.com_clusters.yaml
+++ b/config/crd/bases/anywhere.eks.amazonaws.com_clusters.yaml
@@ -289,6 +289,9 @@ spec:
                         registry:
                           description: Name refers to the name of the upstream registry
                           type: string
+                      required:
+                      - namespace
+                      - registry
                       type: object
                     type: array
                   port:
