--- a/pkg/clusterapi/config/containerd_config_append.toml
+++ b/pkg/clusterapi/config/containerd_config_append.toml
@@ -1,12 +1,12 @@
 [plugins."io.containerd.grpc.v1.cri".registry.mirrors]
-  [plugins."io.containerd.grpc.v1.cri".registry.mirrors."public.ecr.aws"]
-    endpoint = ["https://{{index .registryMirrorAddressMappings "public.ecr.aws"}}"]
-  [plugins."io.containerd.grpc.v1.cri".registry.mirrors."783794618700.dkr.ecr.*.amazonaws.com"]
-    endpoint = ["https://{{index .registryMirrorAddressMappings "783794618700.dkr.ecr.*.amazonaws.com"}}"]
+{{- range $orig, $mirror := .registryMirrorMap }}
+  [plugins."io.containerd.grpc.v1.cri".registry.mirrors."{{ $orig }}"]
+    endpoint = ["https://{{ $mirror }}"]
+{{- end }}
 {{- if or .registryCACert .insecureSkip }}
-  [plugins."io.containerd.grpc.v1.cri".registry.configs."{{index .registryMirrorAddressMappings "base"}}".tls]
+  [plugins."io.containerd.grpc.v1.cri".registry.configs."{{ .mirrorBase }}".tls]
 {{- if .registryCACert }}
-    ca_file = "/etc/containerd/certs.d/{{index .registryMirrorAddressMappings "base"}}/ca.crt"
+    ca_file = "/etc/containerd/certs.d/{{ .mirrorBase }}/ca.crt"
 {{- end }}
 {{- if .insecureSkip }}
     insecure_skip_verify = {{.insecureSkip}}
