--- a/pkg/executables/config/kind.yaml
+++ b/pkg/executables/config/kind.yaml
@@ -13,20 +13,22 @@ kubeadmConfigPatches:
         imageTag: {{.EtcdVersion}}
     imageRepository: {{.KubernetesRepository}}
     kubernetesVersion: {{.KubernetesVersion}}
-{{- if .RegistryMirrorConfiguration }}
+{{- if .RegistryMirrorMap }}
 containerdConfigPatches:
   - |
     [plugins."io.containerd.grpc.v1.cri".registry.mirrors]
-      [plugins."io.containerd.grpc.v1.cri".registry.mirrors."public.ecr.aws"]
-        endpoint = ["https://{{index .RegistryMirrorConfiguration "public.ecr.aws"}}"]
-      [plugins."io.containerd.grpc.v1.cri".registry.configs."{{index .RegistryMirrorConfiguration "base"}}".tls]
+{{- range $orig, $mirror := .RegistryMirrorMap }}
+      [plugins."io.containerd.grpc.v1.cri".registry.mirrors."{{ $orig }}"]
+        endpoint = ["https://{{ $mirror }}"]
+{{- end }}
+      [plugins."io.containerd.grpc.v1.cri".registry.configs."{{ .MirrorBase }}".tls]
 {{- if (eq .RegistryCACertPath "") }}
         insecure_skip_verify = true
 {{- else }}
-        ca_file = "/etc/containerd/certs.d/{{index .RegistryMirrorConfiguration "base"}}/ca.crt"
+        ca_file = "/etc/containerd/certs.d/{{ .MirrorBase }}/ca.crt"
 {{- end }}
 {{- if .RegistryAuth }}
-      [plugins."io.containerd.grpc.v1.cri".registry.configs."{{index .RegistryMirrorConfiguration "base"}}".auth]
+      [plugins."io.containerd.grpc.v1.cri".registry.configs."{{ .MirrorBase }}".auth]
         username = "{{.RegistryUsername}}"
         password = "{{.RegistryPassword}}"
 {{- end }}
