--- a/pkg/executables/testdata/kind_config_registry_mirror_with_ca.yaml
+++ b/pkg/executables/testdata/kind_config_registry_mirror_with_ca.yaml
@@ -5,19 +5,21 @@ kubeadmConfigPatches:
     kind: ClusterConfiguration
     dns:
       type: CoreDNS
-      imageRepository: registry-mirror.test:443/eks-anywhere/eks-distro/coredns
+      imageRepository: registry-mirror.test:443/eks-distro/coredns
       imageTag: v1.8.0-eks-1-19-2
     etcd:
       local:
-        imageRepository: registry-mirror.test:443/eks-anywhere/eks-distro/etcd-io
+        imageRepository: registry-mirror.test:443/eks-distro/etcd-io
         imageTag: v3.4.14-eks-1-19-2
-    imageRepository: registry-mirror.test:443/eks-anywhere/eks-distro/kubernetes
+    imageRepository: registry-mirror.test:443/eks-distro/kubernetes
     kubernetesVersion: v1.19.6-eks-1-19-2
 containerdConfigPatches:
   - |
     [plugins."io.containerd.grpc.v1.cri".registry.mirrors]
+      [plugins."io.containerd.grpc.v1.cri".registry.mirrors."783794618700.dkr.ecr.*.amazonaws.com"]
+        endpoint = ["https://registry-mirror.test:443"]
       [plugins."io.containerd.grpc.v1.cri".registry.mirrors."public.ecr.aws"]
-        endpoint = ["https://registry-mirror.test:443/v2/eks-anywhere"]
+        endpoint = ["https://registry-mirror.test:443"]
       [plugins."io.containerd.grpc.v1.cri".registry.configs."registry-mirror.test:443".tls]
         ca_file = "/etc/containerd/certs.d/registry-mirror.test:443/ca.crt"
 nodes:
