--- a/pkg/providers/tinkerbell/testdata/expected_results_cluster_tinkerbell_cp_minimal_registry_mirror.yaml
+++ b/pkg/providers/tinkerbell/testdata/expected_results_cluster_tinkerbell_cp_minimal_registry_mirror.yaml
@@ -115,6 +115,8 @@ spec:
         path: /etc/kubernetes/manifests/kube-vip.yaml
       - content: |
           [plugins."io.containerd.grpc.v1.cri".registry.mirrors]
+            [plugins."io.containerd.grpc.v1.cri".registry.mirrors."783794618700.dkr.ecr.*.amazonaws.com"]
+              endpoint = ["https://1.2.3.4:1234"]
             [plugins."io.containerd.grpc.v1.cri".registry.mirrors."public.ecr.aws"]
               endpoint = ["https://1.2.3.4:1234/v2/eks-anywhere"]
         owner: root:root
