--- a/pkg/providers/nutanix/testdata/eksa-cluster.yaml
+++ b/pkg/providers/nutanix/testdata/eksa-cluster.yaml
@@ -60,7 +60,7 @@ spec:
     name: "prism-image"
   cluster:
     type: "name"
-    name: "prism-element"
+    name: "prism-cluster"
   subnet:
     type: "name"
     name: "prism-subnet"
