--- a/pkg/providers/vsphere/config/template-cp.yaml
+++ b/pkg/providers/vsphere/config/template-cp.yaml
@@ -418,12 +418,13 @@ spec:
   replicas: {{.controlPlaneReplicas}}
   version: {{.kubernetesVersion}}
 ---
+{{- if not .disableCSI }}
 apiVersion: addons.cluster.x-k8s.io/v1beta1
 kind: ClusterResourceSet
 metadata:
   labels:
     cluster.x-k8s.io/cluster-name: {{.clusterName}}
-  name: {{.resourceSetName}}
+  name: {{.csiResourceSetName}}
   namespace: {{.eksaSystemNamespace}}
 spec:
   strategy: Reconcile
@@ -431,7 +432,6 @@ spec:
     matchLabels:
       cluster.x-k8s.io/cluster-name: {{.clusterName}}
   resources:
-{{- if not .disableCSI }}
   - kind: Secret
     name: vsphere-csi-controller
   - kind: ConfigMap
@@ -446,7 +446,21 @@ spec:
     name: vsphere-csi-node
   - kind: ConfigMap
     name: vsphere-csi-controller
+---
 {{- end }}
+apiVersion: addons.cluster.x-k8s.io/v1beta1
+kind: ClusterResourceSet
+metadata:
+  labels:
+    cluster.x-k8s.io/cluster-name: {{.clusterName}}
+  name: {{.cpiResourceSetName}}
+  namespace: {{.eksaSystemNamespace}}
+spec:
+  strategy: Reconcile
+  clusterSelector:
+    matchLabels:
+      cluster.x-k8s.io/cluster-name: {{.clusterName}}
+  resources:
   - kind: Secret
     name: cloud-controller-manager
   - kind: Secret
