--- a/pkg/providers/vsphere/testdata/expected_results_minimal_disable_csi_cp.yaml
+++ b/pkg/providers/vsphere/testdata/expected_results_minimal_disable_csi_cp.yaml
@@ -364,7 +364,7 @@ kind: ClusterResourceSet
 metadata:
   labels:
     cluster.x-k8s.io/cluster-name: test
-  name: test-cpi-csi
+  name: test-cpi
   namespace: eksa-system
 spec:
   strategy: Reconcile
