--- a/pkg/providers/docker/testdata/valid_deployment_md_expected_124onwards.yaml
+++ b/pkg/providers/docker/testdata/valid_deployment_md_expected_124onwards.yaml
@@ -12,6 +12,7 @@ spec:
           taints: []
           kubeletExtraArgs:
             eviction-hard: nodefs.available<0%,nodefs.inodesFree<0%,imagefs.available<0%
+            cgroup-driver: systemd
             tls-cipher-suites: TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256
 ---
 apiVersion: cluster.x-k8s.io/v1beta1
