Update CAPAS API validation

--- a/config/crd/bases/anywhere.eks.amazonaws.com_snowmachineconfigs.yaml
+++ b/config/crd/bases/anywhere.eks.amazonaws.com_snowmachineconfigs.yaml
@@ -101,7 +101,7 @@ spec:
                           type: boolean
                         index:
                           description: Index is the index number of DNI
-                          maximum: 7
+                          maximum: 8
                           minimum: 1
                           type: integer
                         ipPool:
@@ -169,6 +169,7 @@ spec:
                           minimum: 0
                           type: integer
                       type: object
+                    maxItems: 8
                     minItems: 1
                     type: array
                   dns:
