registry mirror auth bottlerocket

--- a/pkg/providers/tinkerbell/config/template-cp.yaml
+++ b/pkg/providers/tinkerbell/config/template-cp.yaml
@@ -122,6 +122,10 @@ spec:
         caCert: |
 {{ .registryCACert | indent 10 }}
         {{- end }}
+        {{- if .registryAuth }}
+        username: {{.registryUsername}}
+        password: {{.registryPassword}}
+        {{- end }}
 {{- end }}
       nodeRegistration:
         ignorePreflightErrors:
