--- a/pkg/providers/tinkerbell/config/template-md.yaml
+++ b/pkg/providers/tinkerbell/config/template-md.yaml
@@ -86,6 +86,10 @@ spec:
           caCert: |
 {{ .registryCACert | indent 12 }}
           {{- end }}
+          {{- if .registryAuth }}
+          username: {{.registryUsername}}
+          password: {{.registryPassword}}
+          {{- end }}
 {{- end }}
         nodeRegistration:
 {{- if .workerNodeGroupTaints }}
