--- a/pkg/providers/vsphere/config/template-md.yaml
+++ b/pkg/providers/vsphere/config/template-md.yaml
@@ -29,6 +29,10 @@ spec:
           caCert: |
 {{ .registryCACert | indent 12 }}
           {{- end }}
+         {{- if .registryAuth }}
+          username: {{.registryUsername}}
+          password: {{.registryPassword}}
+         {{- end }}
 {{- end }}
         nodeRegistration:
           criSocket: /var/run/containerd/containerd.sock
