--- a/pkg/providers/tinkerbell/testdata/expected_results_cluster_tinkerbell_cp_registry_mirror_with_cert.yaml
+++ b/pkg/providers/tinkerbell/testdata/expected_results_cluster_tinkerbell_cp_registry_mirror_with_cert.yaml
@@ -136,9 +136,9 @@ spec:
       - content: |
           [plugins."io.containerd.grpc.v1.cri".registry.mirrors]
             [plugins."io.containerd.grpc.v1.cri".registry.mirrors."783794618700.dkr.ecr.*.amazonaws.com"]
-              endpoint = ["https://1.2.3.4:1234"]
+              endpoint = ["https://1.2.3.4:1234/v2/curated-packages"]
             [plugins."io.containerd.grpc.v1.cri".registry.mirrors."public.ecr.aws"]
-              endpoint = ["https://1.2.3.4:1234"]
+              endpoint = ["https://1.2.3.4:1234/v2/eks-anywhere"]
             [plugins."io.containerd.grpc.v1.cri".registry.configs."1.2.3.4:1234".tls]
               ca_file = "/etc/containerd/certs.d/1.2.3.4:1234/ca.crt"
         owner: root:root
