fixed the uuid key which is passed to capx

--- a/pkg/providers/nutanix/config/cp-template.yaml
+++ b/pkg/providers/nutanix/config/cp-template.yaml
@@ -182,7 +182,7 @@ spec:
         name: "{{.imageName}}"
 {{ else if (eq .imageIDType "uuid") }}
         type: uuid
-        name: "{{.imageUUID}}"
+        uuid: "{{.imageUUID}}"
 {{ end }}
       cluster:
 {{- if (eq .nutanixPEClusterIDType "name") }}
@@ -190,7 +190,7 @@ spec:
         name: "{{.nutanixPEClusterName}}"
 {{- else if (eq .nutanixPEClusterIDType "uuid") }}
         type: uuid
-        name: "{{.nutanixPEClusterUUID}}"
+        uuid: "{{.nutanixPEClusterUUID}}"
 {{ end }}
       subnet:
 {{- if (eq .subnetIDType "name") }}
@@ -198,5 +198,5 @@ spec:
           name: "{{.subnetName}}"
 {{- else if (eq .subnetIDType "uuid") }}
         - type: uuid
-          name: "{{.subnetUUID}}"
+          uuid: "{{.subnetUUID}}"
 {{ end }}
