--- a/pkg/providers/vsphere/config/template-cp.yaml
+++ b/pkg/providers/vsphere/config/template-cp.yaml
@@ -123,9 +123,9 @@ spec:
           - {{ . }}
         {{- end }}
 {{- end }}
-{{- if and .registryMirrorConfiguration (eq .format "bottlerocket") }}
+{{- if and .registryMirrorMap (eq .format "bottlerocket") }}
       registryMirror:
-        endpoint: {{.registryMirrorConfiguration}}
+        endpoint: {{ .publicMirror }}
         {{- if .registryCACert }}
         caCert: |
 {{ .registryCACert | indent 10 }}
@@ -271,19 +271,21 @@ spec:
     - content: |
 {{ .registryCACert | indent 8 }}
       owner: root:root
-      path: "/etc/containerd/certs.d/{{.registryMirrorConfiguration}}/ca.crt"
+      path: "/etc/containerd/certs.d/{{ .mirrorBase }}/ca.crt"
 {{- end }}
-{{- if .registryMirrorConfiguration }}
+{{- if .registryMirrorMap }}
     - content: |
         [plugins."io.containerd.grpc.v1.cri".registry.mirrors]
-          [plugins."io.containerd.grpc.v1.cri".registry.mirrors."public.ecr.aws"]
-            endpoint = ["https://{{.registryMirrorConfiguration}}"]
+          {{- range $orig, $mirror := .registryMirrorMap }}
+          [plugins."io.containerd.grpc.v1.cri".registry.mirrors."{{ $orig }}"]
+            endpoint = ["https://{{ $mirror }}"]
+          {{- end }}
           {{- if .registryCACert }}
-          [plugins."io.containerd.grpc.v1.cri".registry.configs."{{.registryMirrorConfiguration}}".tls]
-            ca_file = "/etc/containerd/certs.d/{{.registryMirrorConfiguration}}/ca.crt"
+          [plugins."io.containerd.grpc.v1.cri".registry.configs."{{ .mirrorBase }}".tls]
+            ca_file = "/etc/containerd/certs.d/{{ .mirrorBase }}/ca.crt"
           {{- end }}
           {{- if .registryAuth }}
-          [plugins."io.containerd.grpc.v1.cri".registry.configs."{{.registryMirrorConfiguration}}".auth]
+          [plugins."io.containerd.grpc.v1.cri".registry.configs."{{ .mirrorBase }}".auth]
             username = "{{.registryUsername}}"
             password = "{{.registryPassword}}"
           {{- end }}
@@ -366,9 +368,9 @@ spec:
         - {{ . }}
         {{- end }}
 {{- end }}
-{{- if and .registryMirrorConfiguration (eq .format "bottlerocket") }}
+{{- if and .registryMirrorMap (eq .format "bottlerocket") }}
       registryMirror:
-        endpoint: {{.registryMirrorConfiguration}}
+        endpoint: {{ .publicMirror }}
         {{- if .registryCACert }}
         caCert: |
 {{ .registryCACert | indent 10 }}
@@ -396,10 +398,10 @@ spec:
         {{- end }}
 {{- end }}
     preKubeadmCommands:
-{{- if and .registryMirrorConfiguration (ne .format "bottlerocket") }}
+{{- if and .registryMirrorMap (ne .format "bottlerocket") }}
     - cat /etc/containerd/config_append.toml >> /etc/containerd/config.toml
 {{- end }}
-{{- if and (or .proxyConfig .registryMirrorConfiguration) (ne .format "bottlerocket") }}
+{{- if and (or .proxyConfig .registryMirrorMap) (ne .format "bottlerocket") }}
     - sudo systemctl daemon-reload
     - sudo systemctl restart containerd
 {{- end }}
@@ -511,9 +513,9 @@ spec:
         - {{ . }}
       {{- end }}
 {{- end }}
-{{- if .registryMirrorConfiguration }}
+{{- if .registryMirrorMap }}
     registryMirror:
-      endpoint: {{.registryMirrorConfiguration}}
+      endpoint: {{ .publicMirror }}
       {{- if .registryCACert }}
       caCert: |
 {{ .registryCACert | indent 8 }}
