--- a/pkg/providers/vsphere/config/template-md.yaml
+++ b/pkg/providers/vsphere/config/template-md.yaml
@@ -22,9 +22,9 @@ spec:
             - {{ . }}
           {{- end }}
 {{- end }}
-{{- if and .registryMirrorConfiguration (eq .format "bottlerocket") }}
+{{- if and .registryMirrorMap (eq .format "bottlerocket") }}
         registryMirror:
-          endpoint: {{.registryMirrorConfiguration}}
+          endpoint: {{ .publicMirror }}
           {{- if .registryCACert }}
           caCert: |
 {{ .registryCACert | indent 12 }}
@@ -55,7 +55,7 @@ spec:
 {{ .kubeletExtraArgs.ToYaml | indent 12 }}
 {{- end }}
           name: '{{"{{"}} ds.meta_data.hostname {{"}}"}}'
-{{- if and (ne .format "bottlerocket") (or .proxyConfig .registryMirrorConfiguration) }}
+{{- if and (ne .format "bottlerocket") (or .proxyConfig .registryMirrorMap) }}
       files:
 {{- end }}
 {{- if and .proxyConfig (ne .format "bottlerocket") }}
@@ -72,19 +72,21 @@ spec:
       - content: |
 {{ .registryCACert | indent 10 }}
         owner: root:root
-        path: "/etc/containerd/certs.d/{{.registryMirrorConfiguration}}/ca.crt"
+        path: "/etc/containerd/certs.d/{{ .mirrorBase }}/ca.crt"
 {{- end }}
-{{- if .registryMirrorConfiguration }}
+{{- if .registryMirrorMap }}
       - content: |
           [plugins."io.containerd.grpc.v1.cri".registry.mirrors]
-            [plugins."io.containerd.grpc.v1.cri".registry.mirrors."public.ecr.aws"]
-              endpoint = ["https://{{.registryMirrorConfiguration}}"]
+            {{- range $orig, $mirror := .registryMirrorMap }}
+            [plugins."io.containerd.grpc.v1.cri".registry.mirrors."{{ $orig }}"]
+              endpoint = ["https://{{ $mirror }}"]
+            {{- end }}
             {{- if .registryCACert }}
-            [plugins."io.containerd.grpc.v1.cri".registry.configs."{{.registryMirrorConfiguration}}".tls]
-              ca_file = "/etc/containerd/certs.d/{{.registryMirrorConfiguration}}/ca.crt"
+            [plugins."io.containerd.grpc.v1.cri".registry.configs."{{ .mirrorBase }}".tls]
+              ca_file = "/etc/containerd/certs.d/{{ .mirrorBase }}/ca.crt"
             {{- end }}
             {{- if .registryAuth }}
-            [plugins."io.containerd.grpc.v1.cri".registry.configs."{{.registryMirrorConfiguration}}".auth]
+            [plugins."io.containerd.grpc.v1.cri".registry.configs."{{ .mirrorBase }}".auth]
               username = "{{.registryUsername}}"
               password = "{{.registryPassword}}"
             {{- end }}
@@ -93,10 +95,10 @@ spec:
 {{- end }}
 {{- end }}
       preKubeadmCommands:
-{{- if and .registryMirrorConfiguration (ne .format "bottlerocket") }}
+{{- if and .registryMirrorMap (ne .format "bottlerocket") }}
       - cat /etc/containerd/config_append.toml >> /etc/containerd/config.toml
 {{- end }}
-{{- if and (or .proxyConfig .registryMirrorConfiguration) (ne .format "bottlerocket") }}
+{{- if and (or .proxyConfig .registryMirrorMap) (ne .format "bottlerocket") }}
       - sudo systemctl daemon-reload
       - sudo systemctl restart containerd
 {{- end }}
