now passing additionalTrustBundle to capx (#4321)
* now passing additionalTrustBundle to capx

* now passing pem cert as string instead of configmap

this worked for create and delete

--- a/pkg/providers/nutanix/config/cp-template.yaml
+++ b/pkg/providers/nutanix/config/cp-template.yaml
@@ -5,6 +5,12 @@ metadata:
   namespace: "{{.eksaSystemNamespace}}"
 spec:
   prismCentral:
+{{- if .nutanixAdditionalTrustBundle }}
+    additionalTrustBundle:
+      kind: String
+      data: |
+{{ .nutanixAdditionalTrustBundle | indent 8 }}
+{{- end }}
     address: "{{.nutanixEndpoint}}"
     port: {{.nutanixPort}}
     insecure: {{.nutanixInsecure}}
