update registrymirrorsecret template

--- a/pkg/curatedpackages/config/registrymirrorsecret.yaml
+++ b/pkg/curatedpackages/config/registrymirrorsecret.yaml
@@ -3,7 +3,9 @@ stringData:
   USERNAME: {{.mirrorUsername}}
   PASSWORD: {{.mirrorPassword}}
   CACERTCONTENT: |
-    {{.mirrorCACertContent}}
+    {{- range $line := .mirrorCACertContent}}
+    {{ $line }}
+    {{- end}}
 kind: Secret
 metadata:
   name: registry-mirror-secret
