Update snow preflight validations, update kubeadm command

--- a/config/manifest/eksa-components.yaml
+++ b/config/manifest/eksa-components.yaml
@@ -5423,6 +5423,10 @@ spec:
                 type: string
               storagePolicyName:
                 type: string
+              tags:
+                items:
+                  type: string
+                type: array
               template:
                 type: string
               users:
